[FULL] Add budget page
