# front/rust-away/src/app/models/chat.ts
@@ -1,0 +1,7 @@
+import { User } from "./user";
+
+export class Comment {
+    message!: string;
+    senderWorker!: boolean;
+    creationDate!: Date;
+}
